[package]
name = "ferris_extensions"
version = "0.1.0"
authors = ["redradist <redradist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "1.0.3", features = ["full"] }
Inflector = "0.11.4"

[lib]
proc-macro = true